<resources>
    <string name="app_name">viewDemo</string>
    <string name="bottom_bt_movie">电影</string>
    <string name="bottom_bt_cartoon">动漫</string>
    <string name="bottom_bt_book">书籍</string>
    <string name="bottom_bt_news">新闻</string>
    <string name="bottom_bt_browser">浏览器</string>
    <string name="title_bar_text">标题</string>
    <string name="title_default">标题</string>
    <string name="tab_bar_baidu">百度</string>
    <string name="tab_bar_sina">新浪</string>
    <string name="tab_bar_zhihu">知乎</string>
    <string name="tab_bar_tx">腾讯</string>
    <string name="tab_bar_bz">B站</string>
    <string name="tab_bar_android">安卓官网</string>
    <string name="left_seconds">关闭|3s</string>
</resources>